  [#15574] unneeded compatibility break
  [#15595] GPIOR0 misspelled for ATtiny25/45/85
  [#15732] interrupt.h: ISR() incompatibility with gcc 3.4.5
  [#15890] missing /devtools/gen-avr-lib-tree.sh
  [#16039] Names in Pxy (i.e. PA0) style of ports pins for some devices are
           not defined.
  [#16260] _crc16_update lacks C equivalent
  [#16434] EMPTY_INTERRUPT has no misspelled vector checking
  [#16441] eeprom.h should use __asm__
  [#17068] wdt.h file: __AVR_ATmeg324P__ spelling mistake

* Other changes:

  - New Power Management API in <avr/power.h>. This provides C language
    macros to manipulate the Power Reduction Register(s) across multiple
    processors.

  [patch #4611] sleep.h sleep_mode() not interrupt safe

  - The simple demo has been modernized a bit.  Documentation now
    generally refers to the ATmega8 rather than the AT90S2313, and
    the #ifdef spaghetti has been moved out into iocompat.h.

  - A new demo project ("largedemo") has been added.  It extends
    the simple demo by adding some controls, and thereby touches
    a good number of avr-libc concepts.

  - Another demo project ("stdiodemo") has been added.  It
    demonstrates the setup of the standard IO facilities using
    a practical small application.

  - The demo projects now install their source code as part of
    the documentation tree.

  - The simple demo has been ported to ATmega8515, ATmega8535,
    ATmega164P, ATmega165, ATmega169, ATmega324P, ATmega325,
    ATmega3250, ATmega329, ATmega3290, ATmega640, ATmega644,
    ATmega644P, ATmega645, ATmega6450, ATmega649, ATmega6490,
    ATmega1280, ATmega1281, ATtiny2313, ATtiny24, ATtiny25, ATtiny26,
    ATtiny261, ATtiny44, ATtiny45, ATtiny461, ATtiny84, ATtiny85,
    ATtiny861.

  - More overhaul of the demo documentation, don't use the "squid"
    cable for the largedemo as it is not part of the STK500.

* New devices supported:

  + ATtiny24
  + ATtiny261
  + ATtiny44
  + ATtiny461
  + ATtiny84
  + ATtiny861